--- a/ios/Podfile
+++ b/ios/Podfile
@@ -33,6 +33,7 @@ target 'hocExampleTry' do
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
+  pod  'RNSVG', :path => '../node_modules/react-native-svg'
 
   target 'hocExampleTryTests' do
     inherit! :search_paths
