--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "16.8.1",
-    "react-native": "0.61.0"
+    "react-native": "0.61.0",
+    "react-native-svg": "^9.9.5"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
